## The Research & Education Space
##
## A platform being jointly delivered by Jisc, the British Universities
## Film & Video Council (BUFVC), and the BBC with the aim of bringing as
## much as possible of the UK’s publicly-held archives, and more besides,
## to learners and teachers across the UK.

## Author: Mo McRoberts <mo.mcroberts@bbc.co.uk>
##
## Copyright (c) 2015 BBC
##
##  Licensed under the Apache License, Version 2.0 (the "License");
##  you may not use this file except in compliance with the License.
##  You may obtain a copy of the License at
##
##      http://www.apache.org/licenses/LICENSE-2.0
##
##  Unless required by applicable law or agreed to in writing, software
##  distributed under the License is distributed on an "AS IS" BASIS,
##  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
##  See the License for the specific language governing permissions and
##  limitations under the License.

ACLOCAL_AMFLAGS = -I m4

DIST_SUBDIRS = m4 libcluster liblod libsql liburi anansi quilt twine spindle

SUBDIRS = @subdirs@
